<resources>
    <string name="app_name">Coronavirus App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="intro_1_title">Be Safe From\nCoronavirus!</string>
    <string name="intro_1_desc">Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water!</string>
    <string name="intro_2_title">Follow All Safety Tips!</string>
    <string name="intro_2_desc">Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth. From there, the virus can enter your body and can make you sick.</string>
    <string name="intro_3_title">Protect yourself from\ngetting sick!</string>
    <string name="intro_3_desc">When coughing and sneezing cover mouth and nose with flexed elbow or tissue. Throw tissue into closed bin immediately after use.</string>
    <string name="test">Test</string>
    <string name="lets_take_your_test">Lets Take Your Test</string>
    <string name="back">Back</string>
    <string name="coronavirus">CORONAVIRUS</string>
    <string name="main_page_txt">COVID-19 is a new illness that can affect your lungs and airways.</string>
    <string name="symptoms">Symptoms</string>
    <string name="infected">Infected</string>
    <string name="precautions">Precautions</string>
    <string name="history">History</string>
    <string name="report">Report</string>
    <string name="our_predictions">Our Predictions</string>
    <string name="prediction_note">NOTE: These Predictions is not final, we just give you results on the base of some symptoms are most common, and matching them by your given input.</string>
    <string name="no_symptoms_found">No symptoms found</string>
    <string name="splash_msg">Cronavirus Statics and\nChecker App</string>
    <string name="statics">Statics</string>
    <string name="locationid">locationId</string>
    <string name="continent_name">Continent Name</string>
    <string name="country_name">Country Name</string>
    <string name="province_name">Province Name</string>
    <string name="current_confirmed_count">Current Confirmed Count</string>
    <string name="confirmed_count">Confirmed Count</string>
    <string name="suspected_count">Suspected Count</string>
    <string name="cured_count">Cured Count</string>
    <string name="dead_count">Dead Count</string>
    <string name="update_time">Update Time</string>
    <string name="symptoms_2">SYMPTOMS</string>
    <string name="country">Country</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ferver">Fever</string>
    <string name="is_you_feeling">is you feeling this symptom from  the 7 days?</string>
    <string name="raini_nose">Runny Nose</string>
    <string name="dry_cough">Dry Cough</string>
    <string name="short_breath">Shortness In Breath</string>
    <string name="sore_throat">Sore Throat</string>
    <string name="fatigue">Fatigue</string>
    <string name="headache">Headache</string>
    <string name="chill">Chill</string>
    <string name="nausea_vomiting">Nausea or Vomiting</string>
    <string name="diarrhoea">diarrhoea</string>
    <string name="muscle_pain">Muscle pain or joint pain</string>
    <string name="finish">Finish</string>
    <string name="result_1">Unfortunately! Accourding to our predictions, your numbers is comming Alarming you should checkup to doctor as soon as COVID-19 possible.</string>
    <string name="result_2">Unfortunately! Accourding to our predictions, we got some symptoms in which some are near to main COVID-19 symptoms but you should checkup to doctor for final COVID-19 report.</string>
    <string name="result_3">Unfortunately! Accourding to our predictions, we got some symptoms but also you should checkup to doctor for final COVID-19 report.</string>
    <string name="result_4">Congratulations! Accourding to our predictions, your numbers is comming Normal but also you should checkup to doctor for final COVID-19 report.</string>
    <string name="symptoms_recong">\"RECOGNISING THE SYMPTOMS \"</string>
    <string name="day_1">DAY 1-3</string>
    <string name="symptoms_similar">•\tSymptoms similar to colds.</string>
    <string name="mild_throat">•\tMild throat pain.</string>
    <string name="not_fever">•\tNo fever, not tired.  Still consume food and drink as normal.</string>
    <string name="throat_little">•\tThroat little bit painful, body feels like drunk.</string>
    <string name="voice_becoming">•\tVoice becoming sore.</string>
    <string name="body_temp">•\tBody temperature around 36.5°.</string>
    <string name="beginning_of_dist">•\tBeginning of disturbance on eating habit.</string>
    <string name="mild_headaches">•\t5.Mild headaches</string>
    <string name="mild_diarrhoea">•\tMild diarrhoea</string>
    <string name="day_4">DAY 4</string>
    <string name="day_5">DAY 5</string>
    <string name="throat_pain_and">•\tThroat pain and sore voice</string>
    <string name="mild_body_temp">•\tMild body temp. Body temperature btw 36.5°-36.7°.</string>
    <string name="weak_body_and">•\tWeak body and feeling joints pain.</string>
    <string name="day_6">DAY 6</string>
    <string name="beginning_of_mild">•\tBeginning of mild fever with temperature around 37°</string>
    <string name="dry_cough_1">•\tDry cough</string>
    <string name="throat_pain_while">•\tThroat pain while eating,  swallowing food or talking.</string>
    <string name="exhausted_and_nausea">•\tExhausted and nausea</string>
    <string name="difficulty_in">•\tDifficulty in breathing occasionally</string>
    <string name="fingers_feeling">•\tFingers feeling pain</string>
    <string name="diarrhea_and">•\tDiarrhea and vommitting</string>
    <string name="day_7">DAY 7</string>
    <string name="higher_fever">•\tHigher fever from 37.4°-37.8°</string>
    <string name="couging">•\tCoughing incessantly  with phlegm.</string>
    <string name="body_pain_headache">•\tBody pain and headache.</string>
    <string name="worsening">•\tWorsening diarrhea.</string>
    <string name="vomiting">•\tVomiting</string>
    <string name="day_8">DAY 8</string>
    <string name="fever_arround">•\tFever around 38° or above 38°</string>
    <string name="breathing_difficul">•\tBreathing difficulties, everytime breathing, chest feels heavy.</string>
    <string name="coughing">•\tCoughing incessantly.</string>
    <string name="headaches_joints">•\tHeadaches, joints becoming lame and buttock pain.</string>
    <string name="day_9">DAY 9.</string>
    <string name="symptoms_remain">•\tSymptoms remain unchanged but becoming worst</string>
    <string name="worsening_fever">•\tWorsening fever</string>
    <string name="worsening_cough">•\t3.Worsening cough</string>
    <string name="difficult_breath">•\tDifficulties in breathing and have to struggle hard to breath.</string>
    <string name="what_to_do">What To Do if You Are Sick</string>
    <string name="steps_to_help">Steps to help prevent the spread of COVID-19 if you are sick</string>
    <string name="stay_home">Stay home except to get medical care</string>
    <string name="stay_home_2">•\tStay home: Stay home: People who are mildly ill with COVID-19 are able to isolate at home during their illness. You should restrict activities outside your home, except for getting medical care.</string>
    <string name="avoid_public">•\tAvoid public areas: Do not go to work, school, or public areas.</string>
    <string name="avoid_public_trans">•\tAvoid public transportation: Avoid using public transportation, ride-sharing, or taxis.</string>
    <string name="separate_yourself">Separate yourself from other people and animals in your home</string>
    <string name="stay_away_from">•\tStay away from others: As much as possible, you should stay in a specific room and away from other people in your home. Also, you should use a separate bathroom, if available.</string>
    <string name="limit_contact"><![CDATA[•\tLimit contact with pets & animals: You should restrict contact with pets and other animals while you are sick with COVID-19, just like you would around other people. Although there have not been reports of pets or other animals becoming sick with COVID-19, it is still recommended that people sick with COVID-19 limit contact with animals until more information is known about the virus.]]></string>
    <string name="when_possible">•\tWhen possible, have another member of your household care for your animals while you are sick. If you are sick with COVID-19, avoid contact with your pet, including petting, snuggling, being kissed or licked and sharing food. If you must care for your pet or be around animals while you are sick, wash your hands before and after you interact with pets and wear a facemask. See COVID-19 and Animals for more information.</string>
    <string name="call_ahead">Call ahead before visiting your doctor</string>
    <string name="call_ahead_2">•\tCall ahead: If you have a medical appointment, call the healthcare provider and tell them that you have or may have COVID-19. This will help the healthcare provider’s office take steps to keep other people from getting infected or exposed.</string>
    <string name="wear_a_facemask">Wear a facemask if you are sick</string>
    <string name="if_you_are_sick">•\tIf you are sick: You should wear a facemask when you are around other people (e.g., sharing a room or vehicle) or pets and before you enter a healthcare provider’s office.</string>
    <string name="if_you_are_caring">•\tIf you are caring for others: If the person who is sick is not able to wear a facemask (for example, because it causes trouble breathing), then people who live with the person who is sick should not stay in the same room with them, or they should wear a facemask if they enter a room with the person who is sick.</string>
    <string name="cover_your_coughs">Cover your coughs and sneezes</string>
    <string name="cover_cover">•\tCover: Cover your mouth and nose with a tissue when you cough or sneeze.</string>
    <string name="dispose">•\tDispose: Throw used tissues in a lined trash can.</string>
    <string name="wash_hands">•\tWash hands: Immediately wash your hands with soap and water for at least 20 seconds or, if soap and water are not available, clean your hands with an alcohol-based hand sanitizer that contains at least 60% alcohol.</string>
    <string name="clean_your_hands">Clean your hands often</string>
    <string name="wash_hands_2">•\tWash hands: Wash your hands often with soap and water for at least 20 seconds, especially after blowing your nose, coughing, or sneezing; going to the bathroom; and before eating or preparing food.</string>
    <string name="hand_sanitizer">•\tHand sanitizer: If soap and water are not readily available, use an alcohol-based hand sanitizer with at least 60% alcohol, covering all surfaces of your hands and rubbing them together until they feel dry.</string>
    <string name="soap_and_water">•\tSoap and water: Soap and water are the best option if hands are visibly dirty.</string>
    <string name="avoid_touching">•\tAvoid touching: Avoid touching your eyes, nose, and mouth with unwashed hands.</string>
    <string name="avoid_sharing">Avoid sharing personal household items</string>
    <string name="do_not_share">•\tDo not share: You should not share dishes, drinking glasses, cups, eating utensils, towels, or bedding with other people or pets in your home.</string>
    <string name="wash_throughly">•\tWash thoroughly after use: After using these items, they should be washed thoroughly with soap and water.</string>
</resources>