<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.ResultActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:elevation="6dp"
        app:cardElevation="6dp"
        android:layout_height="56dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cross_im"
                android:layout_width="32dp"
                android:padding="4dp"
                android:layout_height="32dp"
                android:background="?android:attr/selectableItemBackground"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_close"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:text="@string/report"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="28dp"
                android:gravity="center"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/our_predictions"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:text="@string/prediction_note"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/resutls_tv"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/no_symptoms_found"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/comment_tv"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorAccent"
            android:text=""
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>