<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:elevation="6dp"
        app:cardElevation="6dp"
        android:layout_height="56dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cross_im"
                android:layout_width="32dp"
                android:padding="4dp"
                android:layout_height="32dp"
                android:layout_marginStart="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_close"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:text="@string/test"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="28dp"
                android:gravity="center"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/lets_take_your_test"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:id="@+id/current_tv"
        android:text="(0/12)"
        android:layout_gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/backgroundColor400" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/back"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="1dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@color/backgroundColor400" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/next"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>